2.0.4

Thu Jul 27 08:35:22 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - NEWS: minor update on mge-shut
 - mge-shut.8: update Know Issues for the ondelay / restart issue
 - final version number bump for 2.0.4 release.

2.0.4-pre2

Tue Jul 18 06:47:19 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - nutupsdrv.8: update the drivers list in the SEE ALSO section
 - CREDITS: minor update on the maintainer
 - complete NEWS and UPGRADING for 2.0.4
 - version number bump for 2.0.4-pre2 release.

Thu Jul 13 13:45:22 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - configure.in, config.h.in, newhidups, libusb: add few more
   fixes for Solaris compatibility
 - libhid.h: use stdint.h

Wed Jul 12 10:47:43 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - genericups: merge type 23 in type 22

Mon Jul 10 20:33:13 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: fix the duplicate test.battery.start

Mon Jul 10 20:05:02 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - genericups: add type 23 for CyberPower 725SL (and maybe others)

   (David Kaufman) [Alioth Bug #302337]

Mon Jul 10 07:00:56 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - rhino: new driver for Microsol Rhino UPS hardware
 - solis:
   * add solaris compatibility,
   * add internal / external shutdown programming,
   * save external shutdown programming to ups,
   * support new cables for solis 3
   (from Silvino B. Magalhães)

 - newhidups: fix notification handling on linux 2.4.32, which
   was failing with EINVAL (from Rodrigo Martins de Matos Ventura)

 - powercom.c: rename shutdown() to nut_shutdown() to avoid naming
   conflict on LynxOS,
 - proto.h: add some guards and missing prototypes for LynxOS.

   (Olli Savia) [Alioth Bug #303460]

 - energizerups: fix communication problems for Linux 2.6.15

   (Viktor T. Toth) [Alioth Bug #303393]

 - upsset: assumes stdin closed when called non-POST

   (Julius Malkiewicz) [Alioth Bug #302734]
